--- a/i18n/coy.pot
+++ b/i18n/coy.pot
@@ -73,6 +73,12 @@ msgstr ""
 msgid "Show Offline Contacts"
 msgstr ""
 
+#: ../gui/definitions/MasterPasswordDefinition.xml:12
+msgid ""
+"Please enter the master password for the configuration file. You will not be "
+"asked for this password again until you restart CoyIM."
+msgstr ""
+
 #: ../gui/definitions/TorNotRunningDef.xml:6
 msgid "Tor is not running"
 msgstr ""
